# target-ai-consumer

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  enqueue_report.py  enqueue_report_settings.toml  insert_model.py  insert_model_settings.toml  main.py  pyproject.toml  settings.toml
.github/workflows/: deploy.yml
core/: __init__.py
core/processing/: classification.py  segmentation.py
core/validation/: coffee_leaf_occ.py
interfaces/: __init__.py
interfaces/database/: __init__.py  mysql.py
interfaces/queue/: __init__.py  mysql.py
interfaces/storage/: __init__.py  mysql.py
models/: __init__.py
models/processing/: __init__.py
models/processing/classification/resnet/: __init__.py  resnet50.py
models/processing/segmentation/resnet/: __init__.py  pspnet.py
models/validation/: __init__.py
models/validation/coffee_leaf_occ/resnet/: __init__.py  resnet18.py
